# sudokuSolver

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  board.cpp  board.h  candidates.cpp  candidates.h  iterators.cpp  iterators.h  main.cpp  solver.cpp  solver.h  solvingStrategy.cpp  solvingStrategy.h  tSquares.cpp  tSquares.h  value.cpp  value.h
src/strategies/: CMakeLists.txt  boxLine.cpp  boxLine.h  hidden.cpp  hidden.h  hiddenSingle.cpp  hiddenSingle.h  naked.cpp  naked.h  pointingPair.cpp  pointingPair.h  single.cpp  single.h  swordfish.cpp  swordfish.h  xWing.cpp  xWing.h  yWing.cpp  yWing.h
tests/: CMakeLists.txt  boardTest.cpp  integrationTest.cpp  iteratorTest.cpp  main.cpp  sudokus.txt  tSquareTest.cpp
